Make sure <button> tags with names also have values.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -628,7 +628,10 @@
 			<!-- /tmpl_if --> 
 		</fieldset> 
 
-<button class="button expand toggleDivs" data-target="advanced_options">
+<button 
+	class="button expand toggleDivs" 
+	data-target="advanced_options"
+>
 		Show/Hide Advanced Options...
 </button>
 
