--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -155,7 +155,8 @@
             	<td>
             	 <button 
 				 	type="submit" 
-					class="button small alert">
+					class="button small alert"
+				 >
 						<i class="fi-x"></i> Delete Checked
 				  </button>
             	 </td>
@@ -589,7 +590,10 @@
                     		<input class="toggleCheckboxes" type="checkbox" data-target_class="iasched_ids" >
                        	</td>
                     	<td>
-                    	 <button type="submit" class="button small alert">
+                    	 <button 
+						 	type="submit" 
+							class="button small alert"
+						>
 							 <i class="fi-x"></i> Delete Checked
 						</button>
                     	 </td>
