--- a/dada/templates/plugins/screen_cache/view.tmpl
+++ b/dada/templates/plugins/screen_cache/view.tmpl
@@ -57,7 +57,10 @@
 				<input type="hidden" name="plugin" value="screen_cache" > 
 				<input type="hidden" name="prm" value="remove" >
 				<input type="hidden" name="filename" value="<!-- tmpl_var name -->" --> 
-				<button type="submit" class="alert small button">
+				<button 
+					type="submit" 
+					class="alert small button"
+				>
 					<i class="fi-x"></i>
 				</button>
 			   </form> 
