--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -147,7 +147,8 @@
 					name=""
 					class="button small alert tracker_delete_msg_id_data" 
 					data-mid="<!-- tmpl_var mid -->" 
-				>  	<i class="fi-x"></i>
+				>
+					<i class="fi-x"></i>
 			</button>	
 			</form> 
 		</td>
