--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -571,7 +571,10 @@
 		    		<input type="hidden" name="plugin" value="tracker" > 
 		    		<input type="hidden" name="prm" value="download_activity_logs" > 
 		    		<input type="hidden" name="mid" value="<!-- tmpl_var mid -->" >
-		    		 <button type="submit" class="success button" name="process">
+		    		 <button 
+					 	type="submit" 
+						class="success button" 
+					 >
 						 <i class="fi-page-export-csv"></i> Download Raw Activity Logs (.csv)
 					</button>
 				</form> 
