--- a/dada/templates/transform_to_pro.tmpl
+++ b/dada/templates/transform_to_pro.tmpl
@@ -81,7 +81,10 @@
 		<div class="large-9 columns">
 			<form>
 				<input type="hidden" id="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->">
-			<button type="button" class="success expand verify_pro_dada">
+			<button 
+				type="button" 
+				class="success expand verify_pro_dada"
+			>
 				Verify Your Pro Dada Subscription...
 			</button>
 			</form>
