--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -180,10 +180,17 @@
                  <input type="hidden" name="type" value="<!-- tmpl_var type -->" >
             
                 <li>
-                 <input type="submit" name="process" class="small button"  value="&#8594; Move Selected Bouncing Address Back to Subscribers" >
+                 <button 
+				 	type="submit" 
+					name="process" 
+					class="small button" 
+					value="move" 
+					>
+						&#8594; Move Selected Bouncing Address Back to Subscribers
+					</button>
                 </li>
                 <li>
-                 <button type="submit" name="process" class="small button">
+                 <button type="submit" name="process" class="small button" value="remove">
             		 Remove Selected Bouncing Addresses <i class="fi-x"></i>
 			     </button>
                 </li>
