--- a/dada/templates/bounce_search_results_modal_menu.tmpl
+++ b/dada/templates/bounce_search_results_modal_menu.tmpl
@@ -22,11 +22,22 @@
 	<input type="hidden" name="return_address" value="<!-- tmpl_var return_address ESCAPE=HTML -->" >
 <!-- /tmpl_if --> 
 
-	
+<button
+	type="submit" 
+	name="process" 
+	class="success button"
+	value="move"
+>
+	&#8594; Move Bouncing Address Back to Subscribers
+</button>
 
-<input type="submit" name="process" class="success button"  value="&#8594; Move Bouncing Address Back to Subscribers" >
-
-<button type="submit" name="process" class="warning button">Remove Bouncing Address <i class="fi-x"></i></button>
+<button 
+	type="submit" 
+	name="process"
+	value="remove" 
+	class="warning button">
+		<i class="fi-x"></i> Remove Bouncing Address 
+</button>
 
 </form>
 
