--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -178,7 +178,8 @@
 				type="submit" 
 				<!-- tmpl_unless is_paused -->
 					<!-- tmpl_if sending_done -->
-						disabled="disabled" class="button tiny disabled"
+						disabled="disabled" 
+						class="button tiny disabled"
 					<!-- tmpl_else -->
 						class="button tiny alert killMonitoredSending"
 					<!--/tmpl_if -->
