Make this work a little... make this work.

--- a/dada/templates/transform_to_pro_failure.tmpl
+++ b/dada/templates/transform_to_pro_failure.tmpl
@@ -1,7 +1,14 @@
+<!-- begin transform_to_pro_failure.tmpl -->
+
 <h1>Sorry,</h1>
 
-<p>There seems to be a problem with verifying your to Pro Dada account. Please double 
-check that your Pro Dada username and password are correct and try again.</p>
-
-
+<div class="alert-box warning radius">
+<p>There seem to have been a problem with either verifying your to Pro Dada account, or doing 
+the actual transformation.</p>
+<p>More information may be found in the app's error log.
+</p>
+	
 <!-- tmpl_include transform_to_pro.tmpl -->
+
+<!-- end transform_to_pro_failure.tmpl -->
+
