--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -14,7 +14,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Plugins
+				Plugins/Extensions
 			 </a>
 	 	    <a 
 				href="<!-- tmpl_var Plugin_URL -->"
