A few more id's to tweak.

--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -86,7 +86,7 @@
 
 	  
 		<!-- tmpl_if show_fields --> 
-			<div id="subscriber_fields"> 
+			<div id="ddm_subscriber_fields"> 
 			<!-- tmpl_if subscriber_fields --> 
 			    <!-- tmpl_loop subscriber_fields -->
 					<div class="row">
@@ -126,7 +126,7 @@
 							type="submit" 
 							value="Subscribe" 
 							class="button success expand" 
-							id="subscribe_button"
+							id="ddm_subscribe_button"
 						>
 			</div>
 		</div>
