New-style query strings just never caught on, did they?

--- a/dada/templates/edit_archived_msg.tmpl
+++ b/dada/templates/edit_archived_msg.tmpl
@@ -54,7 +54,7 @@
   </p>
 
   <p>
-	 <a href="<!-- tmpl_var S_PROGRAM_URL-->?flavor=view_archive;id=<!-- tmpl_var id -->">
+	 <a href="<!-- tmpl_var S_PROGRAM_URL-->?flavor=view_archive&id=<!-- tmpl_var id -->">
 		&lt;-- View Saved Message
 	 </a>
 	</p>
