--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -61,17 +61,17 @@
 			>
 	    </td>
 	    <td> 
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive;id=<!-- tmpl_var id -->">
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive&id=<!-- tmpl_var id -->">
 			<!-- tmpl_var name="from" ESCAPE="HTML" -->
 		</a>
 		</td>
 	    <td> 
-	     <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive;id=<!-- tmpl_var id -->">
+	     <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive&id=<!-- tmpl_var id -->">
 			<!-- tmpl_var name="subject" ESCAPE="HTML" -->
 			</a>
 		</td>
 		<td>
-		  <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive;id=<!-- tmpl_var id -->">
+		  <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive&id=<!-- tmpl_var id -->">
 		 <!-- tmpl_var date -->
 		</a>
 		</td> 
