--- a/dada/templates/membership_activity_screen.tmpl
+++ b/dada/templates/membership_activity_screen.tmpl
@@ -6,7 +6,7 @@
 
 		<!-- tmpl_if archive_subject --> 
 			<h3>
-				<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive;id=<!-- tmpl_var mid -->" target="_blank">
+				<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive&id=<!-- tmpl_var mid -->" target="_blank">
 				<!-- tmpl_var archive_subject escape="HTML" --> 
 				</a>
 			</h3>
