--- a/dada/templates/view_archive_screen.tmpl
+++ b/dada/templates/view_archive_screen.tmpl
@@ -14,7 +14,10 @@
 				View
 			</a>
 			
-			<a href="current">
+			<a 
+				href="#"
+				class="current"
+			>
 				<!-- tmpl_var name="subject" ESCAPE="HTML" -->
 			</a>
 		</nav>
@@ -39,7 +42,10 @@
  Subject: <!-- tmpl_var name="subject" ESCAPE="HTML" -->
 </h3>
 
-<iframe src="<!-- tmpl_var S_PROGRAM_URL -->?flavor=archive_bare;list=<!-- tmpl_var list_settings.list-->;id=<!-- tmpl_var id -->;admin=1" id="archived_message_body_container">
+<iframe 
+	src="<!-- tmpl_var S_PROGRAM_URL -->?flavor=archive_bare&list=<!-- tmpl_var list_settings.list-->&id=<!-- tmpl_var id -->&admin=1" 
+	id="archived_message_body_container"
+>
 <!-- tmpl_var massaged_msg_for_display --> 
 </iframe>
 
