Adding some simple cache-busting query strings, to the .js and .css files.

--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -72,9 +72,9 @@
 
 
 
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.topbar.js"></script>
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.equalizer.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.topbar.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.equalizer.js?v=<!-- tmpl_var VER escape=URL -->"></script>
   
 <script>
 	$(document).foundation();
