--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -1,9 +1,11 @@
 <!doctype html>
 <html class="no-js" lang="en">
  <head>
+	 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv="Pragma"  content="no-cache" >
   <meta http-equiv="Expires" content="-1" >
   <meta http-equiv="Content-Type" content="text/html; charset=<!-- tmpl_var HTML_CHARSET -->">
@@ -11,8 +13,8 @@
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
 
 
-  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/app.css" />
-  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/foundation-icons/foundation-icons.css" />
+  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/app.css?v=<!-- tmpl_var VER escape=URL -->" />
+  <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/foundation-icons/foundation-icons.css?v=<!-- tmpl_var VER escape=URL -->" />
 
 
  
@@ -23,8 +25,8 @@
 
 <!-- jQuery -->
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-2.1.4.min.js"></script>
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.tablesorter.js"></script>
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.zeroclipboard.min.js"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.tablesorter.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.zeroclipboard.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 
 <!-- tmpl_if load_google_viz --> 
 	<!-- Google Visualization -->
@@ -34,42 +36,42 @@
 <!-- /tmpl_if -->
 
 <!-- tmpl_if load_jquery_validate --> 
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.validate.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.validate.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if load_datetimepicker --> 
-    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery/jquery.datetimepicker.css"/ >
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.datetimepicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery/jquery.datetimepicker.css?v=<!-- tmpl_var VER escape=URL -->"/ >
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.datetimepicker.js?v=<!-- tmpl_var VER escape=URL -->"></script>
     <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/unserialize.jquery.1.0.2.js"></script>
     
 <!-- /tmpl_if -->
 
 <!-- Dada Mail's Admin Javascript -->
-<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.js"         type="text/javascript"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.js?v=<!-- tmpl_var VER escape=URL -->" type="text/javascript"></script>
 
 <!-- tmpl_if load_wysiwyg_editor --> 
 	<!-- WYSIWYG Editors --> 
 	<!-- tmpl_if using_ckeditor --> 
-		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"         type="text/javascript" ></script>
-		<script src="<!-- tmpl_var CKEDITOR_URL -->/adapters/jquery.js"  type="text/javascript"></script>
+		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js?v=<!-- tmpl_var VER escape=URL -->"         type="text/javascript" ></script>
+		<script src="<!-- tmpl_var CKEDITOR_URL -->/adapters/jquery.js?v=<!-- tmpl_var VER escape=URL -->"  type="text/javascript"></script>
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_tiny_mce --> 
-		<script src="<!-- tmpl_var TINY_MCE_URL -->/tinymce.min.js"         type="text/javascript"></script>
-		<script src="<!-- tmpl_var TINY_MCE_URL -->/dada_mail_config.js" type="text/javascript"></script>
+		<script src="<!-- tmpl_var TINY_MCE_URL -->/tinymce.min.js?v=<!-- tmpl_var VER escape=URL -->"         type="text/javascript"></script>
+		<script src="<!-- tmpl_var TINY_MCE_URL -->/dada_mail_config.js?v=<!-- tmpl_var VER escape=URL -->" type="text/javascript"></script>
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
 
-	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/colorbox/colorbox.css">
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/colorbox/jquery.colorbox-min.js"></script>    
-    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/modernizr.js"></script>
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/colorbox/colorbox.css?v=<!-- tmpl_var VER escape=URL -->">
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/colorbox/jquery.colorbox-min.js?v=<!-- tmpl_var VER escape=URL -->"></script>    
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/modernizr.js?v=<!-- tmpl_var VER escape=URL -->"></script>
     
 	
 
 
-	<link type="text/css" media="screen" rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/responsive-tables.css" >
-	<script type="text/javascript" src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/responsive-tables.js"></script>
+	<link type="text/css" media="screen" rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/foundation/responsive-tables.css?v=<!-- tmpl_var VER escape=URL -->" >
+	<script type="text/javascript" src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/responsive-tables.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 
-    <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css?v=<!-- tmpl_var VER escape=URL -->" type="text/css" media="screen" />
 	
 </head>
 <body id="Dada"> 
@@ -206,9 +208,9 @@
 	<!-- /tmpl_if -->
 
 
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.offcanvas.js"></script>
-	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.magellan.js"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.offcanvas.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/foundation/foundation.magellan.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 	<script>
 		$(document).foundation();
 	</script>
