--- a/dada/templates/send_url_email_html_message_form_field_widget.tmpl
+++ b/dada/templates/send_url_email_html_message_form_field_widget.tmpl
@@ -1,109 +1,142 @@
 <!-- begin send_url_email_html_message_form_field_widget.tmpl --> 
 <div class="row">
 	<div class="small-12 columns">
-		<input type="radio" name="content_from" id="content_from_url" value="url" checked="checked" >
+		<input 
+			type="radio"
+			name="content_from"
+			id="content_from_url"
+			value="url" 
+			checked="checked"
+			class="toggle_send_url_options"
+		>
 		<label for="content_from_url">
-			Grab content from a URL:
+			Grab content from a URL
 		</label>
 	</div>
 </div>
-<div class="row">
-	<div class="small-12 columns">
-		<input type="url" name="url" id="url"  placeholder="http://" >
+<div id="HTML_content_from_url_widget">
+	<div class="row panel">
+		<div class="small-12 columns">
+			<input type="url" name="url" id="url"  placeholder="http://" >
+		</div>
 	</div>
 </div>
+
 <div class="row">
 	<div class="small-12 columns">
-		<input type="radio" name="content_from" id="content_from_textarea" value="content_from_textarea" >
+		<input 
+			type="radio" 
+			name="content_from" 
+			id="content_from_textarea" 
+			value="content_from_textarea"
+			class="toggle_send_url_options"
+		>
 		<label for="content_from_textarea">
-			Write/Paste Text:
+			Write/Paste HTML
 		</label>
 	</div>
 </div>
-<div class="row">
-	<div class="small-12 columns">
-		<!-- tmpl_include html_message_form_field_widget.tmpl --> 
+<div id="HTML_content_from_textarea_widget">
+	<div class="row panel">
+		<div class="small-12 columns">
+			<!-- tmpl_include html_message_form_field_widget.tmpl --> 
+		</div>
 	</div>
 </div>
-
-<fieldset>
-<legend>
-	Advanced Options
-</legend>
-
 <div class="row">
 	<div class="small-12 columns">
-		<!-- tmpl_unless can_use_HTML_Tree --> 
-			<div class="alert-box alert radius">
-				Disabled. The following CPAN Perl module will need to be installed: HTML::Tree. 
-			</div>
-		<!-- /tmpl_unless --> 
 		<input 
-			type="checkbox" 
-			name="crop_html_content" 
-			id="crop_html_content" value="1"
+			type="radio"
+			name="content_from"
+			id="content_from_none"
+			value="none"
+			class="toggle_send_url_options"
 		>
-		<label for="crop_html_content">
-			Crop webpage, sending only content found in the tag with: 
+		<label for="content_from_none">
+			Do not Send an HTML version (only PlainText version)
 		</label>
 	</div>
 </div>
-<div class="row collapse">
-	<div class="small-1 large-1 columns">&nbsp;
+
+<div id="HTML_content_advanced_options" class="panel">
+	<fieldset>
+	<legend>
+		Advanced Options
+	</legend>
+
+	<div class="row">
+		<div class="small-12 columns">
+			<!-- tmpl_unless can_use_HTML_Tree --> 
+				<div class="alert-box alert radius">
+					Disabled. The following CPAN Perl module will need to be installed: HTML::Tree. 
+				</div>
+			<!-- /tmpl_unless --> 
+			<input 
+				type="checkbox" 
+				name="crop_html_content" 
+				id="crop_html_content" value="1"
+			>
+			<label for="crop_html_content">
+				Crop webpage, sending only content found in the tag with: 
+			</label>
+		</div>
 	</div>
-	<div class="small-4 large-2 columns">
-		<select 
-			name="crop_html_content_selector_type" 
-			id="crop_html_content_selector_type"
-		> 
-			<option value="id">id:</option>
-			<option value="class">class:</option>
-		</select> 
+	<div class="row collapse">
+		<div class="small-1 large-1 columns">&nbsp;
+		</div>
+		<div class="small-4 large-2 columns">
+			<select 
+				name="crop_html_content_selector_type" 
+				id="crop_html_content_selector_type"
+			> 
+				<option value="id">id:</option>
+				<option value="class">class:</option>
+			</select> 
+		</div>
+		<div class="small-6 large-4 columns">
+			<input 
+				type="text" 
+				name="crop_html_content_selector_label" 
+				id="crop_html_content_selector_label"
+			>
+		</div> 
+		<div class="small-1 large-1 columns">
+		</div>
 	</div>
-	<div class="small-6 large-4 columns">
-		<input 
-			type="text" 
-			name="crop_html_content_selector_label" 
-			id="crop_html_content_selector_label"
-		>
-	</div> 
-	<div class="small-1 large-1 columns">
-	</div>
-</div>
 
 
-<div class="row">
-	<div class="small-12 columns">
-	<input type="radio" name="url_options" id="extern" value="extern" checked="checked" >
-	<label for="extern">
-		Change Image URLs to Absolute
-	</label> 
-	</div> 
-</div>
-<div class="row">
-	<div class="small-12 columns">
-		<input type="radio" name="url_options" value="cid" id="cid" >
-		<label for="cid">
-			Embed Images in Message
-		</label>
-	</div> 
-</div> 	 
-
-<div class="row">
-	<div class="small-12 columns">			 
-		<input 
-			type="checkbox" 
-			name="remove_javascript" 
-			id="remove_javascript" 
-			checked="checked" value="1"
-		> 
-		<label for="remove_javascript">
-			Remove Javascript
-		</label>
+	<div class="row">
+		<div class="small-12 columns">
+		<input type="radio" name="url_options" id="extern" value="extern" checked="checked" >
+		<label for="extern">
+			Change Image URLs to Absolute
+		</label> 
 		</div> 
 	</div>
-</fieldset>
+	<div class="row">
+		<div class="small-12 columns">
+			<input type="radio" name="url_options" value="cid" id="cid" >
+			<label for="cid">
+				Embed Images in Message
+			</label>
+		</div> 
+	</div> 	 
 
+	<div class="row">
+		<div class="small-12 columns">			 
+			<input 
+				type="checkbox" 
+				name="remove_javascript" 
+				id="remove_javascript" 
+				checked="checked" value="1"
+			> 
+			<label for="remove_javascript">
+				Remove Javascript
+			</label>
+			</div> 
+		</div>
+	</fieldset>
+</div>
 
 
 
