Work to get Send a Webpage (+ schedules!) working if you just want to send a plaintext message

--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -193,22 +193,22 @@
 					<div class="small-12 columns">
 	                    <input 
 							type="checkbox" 
-							name="schedule_recurring_only_mass_mail_if_html_diff" 
-							id="schedule_recurring_only_mass_mail_if_html_diff"  
+							name="schedule_recurring_only_mass_mail_if_primary_diff" 
+							id="schedule_recurring_only_mass_mail_if_primary_diff"  
 							class="schedule_field"  
 							value="1" 
 							checked="checked"
 						>
-	                    <label for="schedule_recurring_only_mass_mail_if_html_diff">
-	                        Only send the next scheduled mass mailing, if the HTML content differs from the previous scheduled  mass mailing
+	                    <label for="schedule_recurring_only_mass_mail_if_primary_diff">
+	                        Only send the next scheduled mass mailing, if the primary content differs from the previous scheduled  mass mailing
 	                    </label>
 					</div> 
 				</div>
 			<!-- tmpl_else --> 
                 <input
 					type="hidden" 
-					name="schedule_recurring_only_mass_mail_if_html_diff" 
-					id="schedule_recurring_only_mass_mail_if_html_diff" 
+					name="schedule_recurring_only_mass_mail_if_primary_diff" 
+					id="schedule_recurring_only_mass_mail_if_primary_diff" 
 					value="1"
 				>
         	<!-- /tmpl_if --> 
