--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -40,7 +40,7 @@
 	</li>
 	<li class="tab-title">
 		<a href="#modal_menu">
-			Modal Menu Subscription Form
+			Modal Window Subscription Form
 		</a>
 	</li>
 </ul>
