--- a/dada/templates/preview_jquery_plugin_subscription_form.tmpl
+++ b/dada/templates/preview_jquery_plugin_subscription_form.tmpl
@@ -10,7 +10,7 @@
 
 <hr> 
 
-<h3>Modal Menu Subscription Form</h3> 
+<h3>Modal Window Subscription Form</h3> 
 <fieldset>
     
 <p>Place the following in the head of your page,</p>       
