--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -105,7 +105,7 @@
 		<td>
 	
 		<!-- tmpl_if message_subject -->
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?prm=view_archive&list=<!-- tmpl_var list -->&id=<!-- tmpl_var mid -->" target="_blank">
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive&list=<!-- tmpl_var list -->&id=<!-- tmpl_var mid -->" target="_blank">
 				View 
 			</a> 
 			<!-- tmpl_else --> 
