This adds a spinner to the tables in Membership >> View and Plugins/Extensions >> Tracker
Before this, these tables would just load in, you know: whenever, which is strange as these tables may take a long time to load. 

The dimensions of these divs would also wildly change, which is hard on (well, my) the eyes.

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -27,6 +27,8 @@
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery-2.1.4.min.js"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.tablesorter.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/jquery.zeroclipboard.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/spin.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
+
 
 <!-- tmpl_if load_google_viz --> 
 	<!-- Google Visualization -->
