--- a/dada/templates/plugins/tracker/message_email_report_table.tmpl
+++ b/dada/templates/plugins/tracker/message_email_report_table.tmpl
@@ -4,9 +4,10 @@
 
 
 <!-- tmpl_if report --> 
-	<div> 
-	  <div style="overflow: auto; border:1px solid black overflow-y: scroll; overflow-x: scroll;max-height:640px;padding:3px">
-	
+
+<div style="width:100%"> 
+    <div>
+			
 	<table width="100%">
 	<tr> 
 		<th> 
