--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -64,7 +64,7 @@
 		</legend>
 		
 		<!-- tmpl_if error_list_email_set_to_list_owner_email -->
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is set to the same address as the 
 				<strong>List Owner Email</strong>. 
 				It needs to be set to a different address. 
@@ -72,7 +72,7 @@
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_set_to_another_list_owner_email --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is set to the same address as a <strong>List 
 				Owner Email address of a different Mailing List</strong>. 
 				It needs to be set to a different address. 
@@ -80,7 +80,7 @@
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_set_to_list_admin_email --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is set to the same address as the 
 				<strong>List Admin Email</strong>. It needs to be set to a 
 				different address. 
@@ -88,7 +88,7 @@
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_set_to_another_list_admin_email --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is set to the same address as the <strong>List Admin 
 					Email address of a different Mailing List</strong>. It needs to 
 					be set to a different address. 
@@ -96,40 +96,40 @@
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_subscribed_to_list --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is currently subscribed to your <strong>Subscription 
 				List</strong>. It needs to be set to a different address. 
 			</div> 
 		<!-- /tmpl_if -->
 		<!-- tmpl_if error_list_email_subscribed_to_authorized_senders --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is currently subscribed to your <strong>Authorized
 				Senders List</strong>. It needs to be set to a different address. 
 			</div> 
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_subscribed_to_moderators --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is currently subscribed to your <strong>Moderators 
 				List</strong>. It needs to be set to a different address. 
 			</div> 
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_subscribed_to_another_list --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is currently subscribed to <strong>another mailing 
 				list's Subscription List</strong>. It needs to be set to a different address. 
 			</div> 
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_subscribed_to_another_authorized_senders --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is currently subscribed to <strong>another mailing list's Authorized Senders List</strong>. It needs to be set to a different address. 
 			</div> 
 		<!-- /tmpl_if -->
 
 		<!-- tmpl_if error_list_email_subscribed_to_another_moderators --> 
-			<div class="alert-box error radius">
+			<div class="alert-box alert radius">
 				Your List Email is currently subscribed to <strong>another mailing 
 				list's Moderators List</strong>. It needs to be set to a different address. 
 			</div> 
