--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin membership_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Membership" -->
+<!-- tmpl_set name="title" value="Membership View" -->
 <!-- tmpl_set name="load_jquery_validate" value="1" -->
 
 <div id="screen_meta" data-menu_highlight="view_list"></div>
@@ -555,5 +555,13 @@
 		</form>
 	</div>
 </div> 
+
+<a 
+	href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_list;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->"
+	class="button small"
+>
+		<i class="fi-arrow-left"></i>
+		Back to Membership &#187; View
+</a>
 
 <!-- end membership_screen.tmpl -->
